Article and User DTOs added